fixed z-indexes

--- a/sprint-1__startkit/styles/style.css
+++ b/sprint-1__startkit/styles/style.css
@@ -165,6 +165,7 @@
 .section-title {
   margin: 0;
   text-align: center;
+  z-index: 5;
 
   width: 60%;
 
@@ -178,6 +179,7 @@
 .section-subttitle {
   margin: 20px 0 0 0;
   text-align: center;
+  z-index: 5;
 
   line-height: 34px;
   font-size: 24px;
